# pico-ice-sdk

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  LICENSE.md  Makefile  README.md  include.mk  pico_ice_sdk_import.cmake  script.ld
example/: CMakeLists.txt  asdsad
example/micro_ros_ws/: README.md
example/micro_ros_ws/src/micro_ros_raspberrypi_pico_sdk/: .gitignore  CHANGELOG.rst  CMakeLists.txt  NOTICE  README.md  available_ros2_types  package.xml  pico_micro_ros_example.c  pico_uart_transport.c  pico_uart_transports.h
example/micro_ros_ws/src/micro_ros_raspberrypi_pico_sdk/microros_static_library/library_generation/: library_generation.sh  toolchain.cmake
example/micro_ros_ws/src/pico-sdk/lib/cyw43-driver/: LICENSE
example/micro_ros_ws/src/pico-sdk/lib/tinyusb/lib/FreeRTOS-Kernel/: tasks.c
example/pico-blinky/: CMakeLists.txt  README.md  firmware.c
example/pico-blinky-cplusplus/: CMakeLists.txt  README.md  firmware.cpp
example/pico-cram/: CMakeLists.txt  firmware.c
example/pico-empty/: CMakeLists.txt  README.md  firmware.c  tusb_config.h  usb_descriptors.c
example/pico-flash-io/: CMakeLists.txt  README.md  firmware.c
example/pico-flash-tool/: README.md  firmware.c
example/pico-fpga/: CMakeLists.txt  README.md  firmware.c
example/pico-hello-world/: CMakeLists.txt  README.md  firmware.c  pico_ice_sdk_import.cmake  usb_descriptors.c
example/pico-prog-cram/: firmware.c
example/pico-ssram/: CMakeLists.txt  README.md  firmware.c
example/pico-template/: CMakeLists.txt  README.md  firmware.c  pico_ice_sdk_import.cmake
example/pico-usb-keyboard/: CMakeLists.txt  README.md  firmware.c  tusb_config.h
example/pico-usb-uart/: README.md  firmware.c
examples/: CMakeLists.txt  README.md
examples/ice_apio_blinky/: .gitignore  README.md  apio.ini  top.v  up5k.pcf
examples/ice_apio_uart_echo/: README.md  apio.ini  pico_ice.pcf  top.v
examples/ice_makefile_blinky/: Makefile  README.md  ice40.pcf  top.sv  top.v
examples/ice_makefile_iverilog_counter/: Makefile  README.md  ice40.pcf  iverilog.vvp  testbench.sv  verilator.cpp  vsim.h
examples/ice_makefile_verilator_counter/: .gitignore  Makefile  README.md  ice40.pcf  ice40.sv  top.sv
examples/pico_blinky/: CMakeLists.txt  README.md  main.c  tusb_config.h  usb_descriptors.c
examples/pico_blinky_cplusplus/: CMakeLists.txt  README.md  firmware.cpp  main.cpp  tusb_config.h  usb_descriptors.c
examples/pico_cram/: CMakeLists.txt  README.md  main.c
examples/pico_flash/: CMakeLists.txt  README.md  main.c  pico-sdk
examples/pico_flash_io/: CMakeLists.txt  README.md  main.c  tusb_config.h  usb_descriptors.c
examples/pico_flash_repl/: CMakeLists.txt  README.md  main.c  test.py
examples/pico_flash_tool/: main.c
examples/pico_fpga/: CMakeLists.txt  README.md  main.c
examples/pico_fpga_io/: CMakeLists.txt  README.md  handshake.py  main.c  soc.py  spi.py  spibone.py  top.py  tusb_config.h  usb_descriptors.c
examples/pico_hello_world/: CMakeLists.txt  main.c  test.py
examples/pico_ice/: CMakeLists.txt  README.md  pico-sdk  pico_ice.pcf  top.v
examples/pico_ice_blinky/: CMakeLists.txt  README.md  bin2header.py  main.c
examples/pico_sram/: CMakeLists.txt  README.md  main.c  test.py  tusb_config.h  usb_descriptors.c
examples/pico_ssram/: CMakeLists.txt  README.md  main.c
examples/pico_usb_flash_io/: CMakeLists.txt
examples/pico_usb_fpga/: CMakeLists.txt  README.md  main.c  test.py  tusb_config.h  usb_descriptors.c
examples/pico_usb_hello_world/: README.md  tusb_config.h  usb_descriptors.c
examples/pico_usb_keyboard/: CMakeLists.txt  README.md  main.c  tusb_config.h
examples/pico_usb_spi/: CMakeLists.txt  README.md  pico_ice_spi.py  test.py  usb_descriptors.c
examples/pico_usb_uart/: CMakeLists.txt  main.c  tusb_config.h  usb_descriptors.c
examples/pico_usb_uf2/: CMakeLists.txt  README.md  main.c  null.uf2  rgb_blink.uf2  tusb_config.h  usb_descriptors.c
examples/rp2_blinky/: CMakeLists.txt  README.md  main.c
examples/rp2_blinky_cplusplus/: CMakeLists.txt  README.md  main.cpp
examples/rp2_cram/: CMakeLists.txt  README.md  main.c  rgb_blink.h  rgb_blink.py
examples/rp2_flash/: CMakeLists.txt  README.md  main.c  test.py
examples/rp2_flash_repl/: CMakeLists.txt  README.md  main.c
examples/rp2_fpga/: CMakeLists.txt  README.md  main.c
examples/rp2_fpga_io/: CMakeLists.txt  README.md  main.c  soc.py  top.py  tusb_config.h
examples/rp2_hello_world/: CMakeLists.txt  README.md  main.c
examples/rp2_ice_blinky/: CMakeLists.txt  README.md  export_bitstream.py  main.c  top.v
examples/rp2_ice_i2c/: .gitmodules  CMakeLists.txt  README.md  build.sh  main.c
examples/rp2_ice_i2c/rtl/: i2c_target.v  i2c_target_mac.v  main.v  top_simulation.v  top_synthesis_ice40.v
examples/rp2_ice_i2c_7seg/: .gitignore  CMakeLists.txt  README.md  main.c
examples/rp2_ice_i2c_7seg/rtl/: dual_7seg_display.v  main.v  top_simulation.v  top_synthesis_ice40.v
examples/rp2_sram/: CMakeLists.txt  README.md  main.c  test.py
examples/rp2_usb_fpga/: CMakeLists.txt  README.md  main.c  tusb_config.h
examples/rp2_usb_keyboard/: CMakeLists.txt  README.md  main.c  tusb_config.h
examples/rp2_usb_spi/: CMakeLists.txt  README.md  main.c  tusb_config.h
examples/rp2_usb_uart/: CMakeLists.txt  README.md  main.c  tusb_config.h
examples/rp2_usb_uf2/: CMakeLists.txt  README.md  blinky.uf2  main.c  tusb_config.h
src/: CMakeLists.txt  firmware.c  flash.c  fpga.c  fpga_comm.c  gpio.c  ice.c  ice_bitstream.c  ice_bitstream.pio  ice_comm.c  ice_cram.c  ice_cram.pio  ice_cram_hal.c  ice_flash.c  ice_flash_hal.c  ice_fpga.c  ice_fpga_bitstream.c  ice_fpga_bitstream.pio  ice_fpga_comm.c  ice_fpga_data.c  ice_fpga_flash.c  ice_fpga_hal.c  ice_led.c  ice_sdk.c  ice_smem.c  ice_spi.c  ice_sram.c  ice_usb.c  ice_usb_uart.c  ice_usb_uart.h  ice_wishbone.c  init.c  libc.c  pico-ice.h  pico-sdk_ice_hal.c  rb.c  rb.h  sdk.c  smem.c  spi.c  (+9 more)
src/tinyuf2/: CMakeLists.txt  README.md  board_pico_ice.c  boards.h  main.c
(+554 files in other folders)
