add_subdirectory(examples/pico_blinky)
add_subdirectory(examples/pico_blinky_cplusplus)
add_subdirectory(examples/pico_cram)
add_subdirectory(examples/pico_flash_io)
add_subdirectory(examples/pico_flash_tool)
add_subdirectory(examples/pico_fpga)
add_subdirectory(examples/pico_fpga_io)
add_subdirectory(examples/pico_hello_world)
add_subdirectory(examples/pico_ssram)
add_subdirectory(examples/pico_usb_keyboard)
add_subdirectory(examples/pico_usb_uart)
